WIP burst detection starting to work well.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180902 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180902 Burst analysis.ipynb
@@ -1103,9 +1103,11 @@
    "outputs": [],
    "source": [
     "# TODO: otherwise computing is_unique is costly when we want to get_loc with full key\n",
-    "if \"_cache\" not in labelwise_df.index.__dict__:\n",
-    "    labelwise_df.index.__dict__[\"_cache\"] = {}\n",
-    "labelwise_df.index._cache[\"is_unique\"] = True"
+    "labelwise_df.index.__dict__[\"_cache\"] = {\"lexsort_depth\": 6, \"is_unique\": True}\n",
+    "# labelwise_df.index.lexsort_depth # prime the cache\n",
+    "# if '_cache' not in labelwise_df.index.__dict__:\n",
+    "#     labelwise_df.index.__dict__['_cache'] = {}\n",
+    "# labelwise_df.index._cache['is_unique'] = True"
    ]
   },
   {
@@ -1118,10 +1120,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Bug"
+    "%%time\n",
+    "labelwise_df.index.lexsort_depth"
    ]
   },
   {
@@ -1130,20 +1135,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import OrderedDict\n",
+    "%%time\n",
+    "labelwise_df.index.is_unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func(data):\n",
+    "    data = data.loc[IDX[:, :, 10:], :]\n",
+    "    # cell_sized = data[(data[area] > 100) & (data[area] < 200)]\n",
+    "    cell_sized = data[data[area].between(100, 200)]\n",
+    "    # median = cell_sized[yfp].median()\n",
+    "    bright_ts = (cell_sized[cell_sized[yfp] > 200][yfp].groupby(\"t\").count() > 2).sum()\n",
+    "    # num_brights = (cell_sized & (data[yfp] > 1.2*median)).sum()\n",
+    "    # return (median < 200) and (100 > bright_ts > 1)\n",
+    "    return bright_ts\n",
     "\n",
-    "df = pd.DataFrame(\n",
-    "    OrderedDict(\n",
-    "        [\n",
-    "            (\"food\", pd.Categorical([\"BURGER\", \"CHIPS\", \"SALAD\", \"RICE\"] * 2)),\n",
-    "            (\"day\", ([0] * 4) + ([1] * 4)),\n",
-    "            (\"weight\", np.arange(8)),\n",
-    "        ]\n",
-    "    )\n",
-    ")\n",
     "\n",
-    "df2 = df[df[\"food\"].isin({\"BURGER\", \"CHIPS\"})]\n",
-    "df3 = df2.set_index(\"food\")"
+    "%lprun -f func labelwise_subset.groupby(trench_key).apply(func)"
    ]
   },
   {
@@ -1152,7 +1165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.groupby([\"day\", \"food\"])[\"weight\"].mean()"
+    "a = labelwise_subset.groupby(trench_key).apply(func)"
    ]
   },
   {
@@ -1161,25 +1174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.groupby([\"day\", \"food\"]).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.groupby([\"day\", \"food\"], observed=True)[\"weight\"].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.groupby([\"day\", \"food\"], observed=True).mean()"
+    "a.to_frame()"
    ]
   },
   {
@@ -1197,7 +1192,9 @@
    "source": [
     "yfp = \"YFP/labelwise/p0.9\"\n",
     "mcherry = \"MCHERRY/labelwise/p0.9\"\n",
-    "area = \"YFP/regionprops/area\""
+    "area = \"YFP/regionprops/area\"\n",
+    "trench_key = [\"filename\", \"position\", \"trench_set\", \"trench\"]\n",
+    "trench_t_key = [\"filename\", \"position\", \"trench_set\", \"trench\", \"t\"]"
    ]
   },
   {
@@ -1208,8 +1205,9 @@
    "source": [
     "%%time\n",
     "# labelwise_subset = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2',:],:]\n",
+    "# labelwise_subset = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2',:],:]\n",
     "labelwise_subset = labelwise_df.loc[\n",
-    "    IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2\", :], :\n",
+    "    IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2\", :5], :\n",
     "]"
    ]
   },
@@ -1232,9 +1230,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "grouped_by_trench = labelwise_selected.groupby(\n",
-    "    [\"filename\", \"position\", \"trench_set\", \"trench\"], sort=False, observed=True\n",
-    ")"
+    "grouped_by_trench = labelwise_selected.groupby(trench_key, sort=False, observed=True)"
    ]
   },
   {
@@ -1245,7 +1241,7 @@
    "source": [
     "%%time\n",
     "grouped_by_trench_t = labelwise_selected.groupby(\n",
-    "    [\"filename\", \"position\", \"trench_set\", \"trench\", \"t\"], sort=False, observed=True\n",
+    "    trench_t_key, sort=False, observed=True\n",
     ")"
    ]
   },
@@ -1310,7 +1306,7 @@
     "    median = cell_sized[yfp].median()\n",
     "    bright_ts = (cell_sized[cell_sized[yfp] > 200][yfp].groupby(\"t\").count() > 2).sum()\n",
     "    # num_brights = (cell_sized & (data[yfp] > 1.2*median)).sum()\n",
-    "    return (median < 200) and (100 > bright_ts > 1)\n",
+    "    return (median < 200) and (bright_ts > 30)\n",
     "\n",
     "\n",
     "detected_bursts = grouped_by_trench.filter(func)"
@@ -1322,7 +1318,177 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trenchwise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "len(detected_bursts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "len(detected_bursts.groupby(trench_key))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=180\n",
+    "hv.HoloMap(\n",
+    "    {\n",
+    "        i: hv.Scatter(\n",
+    "            pd.concat([g[1] for g in groups]), kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\"]\n",
+    "        )\n",
+    "        for i, groups in enumerate(util.grouper(detected_bursts.groupby(trench_key), 3))\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bokeh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot = bokeh.plotting.figure(\n",
+    "    plot_width=400, plot_height=400, tools=\"tap\", title=\"Select a circle\"\n",
+    ")\n",
+    "renderer = plot.circle(\n",
+    "    [1, 2, 3, 4, 5],\n",
+    "    [2, 5, 8, 2, 7],\n",
+    "    size=50,\n",
+    "    # set visual properties for selected glyphs\n",
+    "    selection_color=\"firebrick\",\n",
+    "    # set visual properties for non-selected glyphs\n",
+    "    nonselection_fill_alpha=0.2,\n",
+    "    nonselection_fill_color=\"blue\",\n",
+    "    nonselection_line_color=\"firebrick\",\n",
+    "    nonselection_line_alpha=1.0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "renderer.glyph.update?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "renderer.nonselection_glyph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = hv.renderer(\"bokeh\").get_plot(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zz = z.state.renderers[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zz.glyph.line_color"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trenchwise_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=180\n",
+    "# p = hv.Scatter(detected_bursts, kdims=['t'], vdims=['YFP/labelwise/p0.9', 'filename', 'position', 'trench_set', 'trench'])\n",
+    "d = {\n",
+    "    i: hv.Scatter(\n",
+    "        pd.concat([g[1] for g in groups]),\n",
+    "        kdims=[\"t\"],\n",
+    "        vdims=[\"YFP/labelwise/p0.9\", \"filename\", \"position\", \"trench_set\", \"trench\"],\n",
+    "    )\n",
+    "    for i, groups in enumerate(util.grouper(detected_bursts.groupby(trench_key), 5))\n",
+    "}\n",
+    "p = hv.HoloMap(d)\n",
+    "tooltips = [\n",
+    "    (\"t\", \"@t{0[.]0}\"),\n",
+    "    # ('filename', '@filename'),\n",
+    "    (\"trench\", \"@position.@trench_set.@trench\"),\n",
+    "    (\"YFP\", \"@{YFP/labelwise/p0.9}{0[.]0}\"),\n",
+    "]\n",
+    "hover = HoverTool(tooltips=tooltips)\n",
+    "tap = TapTool()\n",
+    "p = p.options(\n",
+    "    \"Scatter\",\n",
+    "    size=3,\n",
+    "    color_index=\"trench\",\n",
+    "    nonselection_alpha=0.3,\n",
+    "    cmap=\"Category20\",\n",
+    "    tools=[hover, tap],\n",
+    ")\n",
+    "# pr = hv.renderer('bokeh').get_plot(p).state\n",
+    "# renderer = pr.renderers[-1]\n",
+    "# renderer.nonselection_glyph = renderer.glyph\n",
+    "p"
    ]
   },
   {
@@ -1391,8 +1557,14 @@
    "source": [
     "%%output size=180\n",
     "p = hv.Scatter(\n",
-    "    detected_bursts[:10_000], kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"trench\"]\n",
-    ").options(size=3, color_index=\"trench\", tools=[\"hover\", \"tap\"], cmap=\"Category20\")\n",
+    "    detected_bursts, kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"trench\"]\n",
+    ").options(\n",
+    "    size=3,\n",
+    "    color_index=\"trench\",\n",
+    "    nonselection_alpha=0.3,\n",
+    "    tools=[\"hover\", \"tap\"],\n",
+    "    cmap=\"Category20\",\n",
+    ")\n",
     "ui.selection_to_stream(p, label_stream)\n",
     "p"
    ]
