--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180904.2 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180904.2 Burst analysis.ipynb
@@ -1069,6 +1069,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trenchwise_df.columns = [\"/\".join(col).strip() for col in trenchwise_df.columns.values]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cols = [\n",
     "    \"filename\",\n",
     "    \"position\",\n",
@@ -1103,9 +1112,11 @@
    "outputs": [],
    "source": [
     "# TODO: otherwise computing is_unique is costly when we want to get_loc with full key\n",
-    "if \"_cache\" not in labelwise_df.index.__dict__:\n",
-    "    labelwise_df.index.__dict__[\"_cache\"] = {}\n",
-    "labelwise_df.index._cache[\"is_unique\"] = True"
+    "labelwise_df.index.__dict__[\"_cache\"] = {\"lexsort_depth\": 6, \"is_unique\": True}\n",
+    "# labelwise_df.index.lexsort_depth # prime the cache\n",
+    "# if '_cache' not in labelwise_df.index.__dict__:\n",
+    "#     labelwise_df.index.__dict__['_cache'] = {}\n",
+    "# labelwise_df.index._cache['is_unique'] = True"
    ]
   },
   {
@@ -1118,10 +1129,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Bug"
+    "%%time\n",
+    "labelwise_df.index.lexsort_depth"
    ]
   },
   {
@@ -1130,20 +1144,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import OrderedDict\n",
+    "%%time\n",
+    "labelwise_df.index.is_unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func(data):\n",
+    "    data = data.loc[IDX[:, :, 10:], :]\n",
+    "    # cell_sized = data[(data[area] > 100) & (data[area] < 200)]\n",
+    "    cell_sized = data[data[area].between(100, 200)]\n",
+    "    # median = cell_sized[yfp].median()\n",
+    "    bright_ts = (cell_sized[cell_sized[yfp] > 200][yfp].groupby(\"t\").count() > 2).sum()\n",
+    "    # num_brights = (cell_sized & (data[yfp] > 1.2*median)).sum()\n",
+    "    # return (median < 200) and (100 > bright_ts > 1)\n",
+    "    return bright_ts\n",
     "\n",
-    "df = pd.DataFrame(\n",
-    "    OrderedDict(\n",
-    "        [\n",
-    "            (\"food\", pd.Categorical([\"BURGER\", \"CHIPS\", \"SALAD\", \"RICE\"] * 2)),\n",
-    "            (\"day\", ([0] * 4) + ([1] * 4)),\n",
-    "            (\"weight\", np.arange(8)),\n",
-    "        ]\n",
-    "    )\n",
-    ")\n",
     "\n",
-    "df2 = df[df[\"food\"].isin({\"BURGER\", \"CHIPS\"})]\n",
-    "df3 = df2.set_index(\"food\")"
+    "%lprun -f func labelwise_subset.groupby(trench_key).apply(func)"
    ]
   },
   {
@@ -1152,7 +1174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.groupby([\"day\", \"food\"])[\"weight\"].mean()"
+    "a = labelwise_subset.groupby(trench_key).apply(func)"
    ]
   },
   {
@@ -1161,25 +1183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.groupby([\"day\", \"food\"]).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.groupby([\"day\", \"food\"], observed=True)[\"weight\"].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.groupby([\"day\", \"food\"], observed=True).mean()"
+    "a.to_frame()"
    ]
   },
   {
@@ -1197,7 +1201,9 @@
    "source": [
     "yfp = \"YFP/labelwise/p0.9\"\n",
     "mcherry = \"MCHERRY/labelwise/p0.9\"\n",
-    "area = \"YFP/regionprops/area\""
+    "area = \"YFP/regionprops/area\"\n",
+    "trench_key = [\"filename\", \"position\", \"trench_set\", \"trench\"]\n",
+    "trench_t_key = [\"filename\", \"position\", \"trench_set\", \"trench\", \"t\"]"
    ]
   },
   {
@@ -1208,6 +1214,7 @@
    "source": [
     "%%time\n",
     "# labelwise_subset = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2',:],:]\n",
+    "# labelwise_subset = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2',:],:]\n",
     "labelwise_subset = labelwise_df.loc[\n",
     "    IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2\", :], :\n",
     "]"
@@ -1220,9 +1227,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "labelwise_selected = labelwise_subset[\n",
-    "    (labelwise_subset[area] > 100) & (labelwise_subset[area] < 400)\n",
-    "]"
+    "labelwise_selected = labelwise_subset  # [(labelwise_subset[area] > 100) & (labelwise_subset[area] < 400)]"
    ]
   },
   {
@@ -1232,9 +1237,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "grouped_by_trench = labelwise_selected.groupby(\n",
-    "    [\"filename\", \"position\", \"trench_set\", \"trench\"], sort=False, observed=True\n",
-    ")"
+    "labelwise_selected2 = util.multi_join(labelwise_selected, trenchwise_df[\"YFP/p0.3\"])"
    ]
   },
   {
@@ -1244,19 +1247,13 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "grouped_by_trench_t = labelwise_selected.groupby(\n",
-    "    [\"filename\", \"position\", \"trench_set\", \"trench\", \"t\"], sort=False, observed=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "trench_median = grouped_by_trench.median()  # quantile(0.5)"
+    "background = labelwise_selected2.loc[IDX[:, :, :, :, :, 0], [yfp, mcherry]]\n",
+    "background.index = background.index.droplevel(\"label\")\n",
+    "background.columns = [c + \"_bg\" for c in background.columns]\n",
+    "cell_sized = labelwise_selected2[labelwise_selected2[area].between(100, 200)].loc[\n",
+    "    IDX[:, :, :, :, :, 1:], :\n",
+    "]\n",
+    "cell_sized = util.multi_join(cell_sized, background)"
    ]
   },
   {
@@ -1267,15 +1264,50 @@
    "source": [
     "%%time\n",
     "def func(data):\n",
-    "    data = data.loc[IDX[:, :, 10:], :]\n",
-    "    median = data[yfp].median()\n",
-    "    # return (median < 150) and (data[yfp].max() > 200) and ((data[area] > 300).sum() < 10) #and (data[yfp] > 1.4*median).sum() > 0\n",
-    "    cell_sized = (data[area] > 100) & (data[area] < 200)\n",
-    "    num_brights = (cell_sized & (data[yfp] > 1.2 * median)).sum()\n",
-    "    return (median < 200) and (num_brights > 10)\n",
+    "    bright_ts = (\n",
+    "        data[data[yfp] - data[yfp + \"_bg\"] > 10][yfp].groupby(\"t\").count() > 2\n",
+    "    ).sum()\n",
+    "    return bright_ts\n",
     "\n",
     "\n",
-    "detected_bursts = grouped_by_trench.filter(func)"
+    "bright_ts = cell_sized.groupby(trench_key).apply(func)\n",
+    "bright_ts.name = \"bright_ts\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bright_ts.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(bright_ts != 0).sum() / (bright_ts == 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(bright_ts, bins=50, log=True, normed=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(bright_ts)"
    ]
   },
   {
@@ -1285,16 +1317,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "def func(data):\n",
-    "    data = data.loc[IDX[:, :, 10:], :]\n",
-    "    cell_sized = data[(data[area] > 100) & (data[area] < 200)]\n",
-    "    median = cell_sized[yfp].median()\n",
-    "    bright_ts = (cell_sized[cell_sized[yfp] > 200][yfp].groupby(\"t\").count() > 2).sum()\n",
-    "    # num_brights = (cell_sized & (data[yfp] > 1.2*median)).sum()\n",
-    "    return (median < 200) and (10 > bright_ts > 1)\n",
-    "\n",
-    "\n",
-    "detected_bursts = grouped_by_trench.filter(func)"
+    "labelwise_selected3 = util.multi_join(labelwise_selected2, bright_ts)"
    ]
   },
   {
@@ -1304,16 +1327,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "def func(data):\n",
-    "    data = data.loc[IDX[:, :, 10:], :]\n",
-    "    cell_sized = data[(data[area] > 100) & (data[area] < 200)]\n",
-    "    median = cell_sized[yfp].median()\n",
-    "    bright_ts = (cell_sized[cell_sized[yfp] > 200][yfp].groupby(\"t\").count() > 2).sum()\n",
-    "    # num_brights = (cell_sized & (data[yfp] > 1.2*median)).sum()\n",
-    "    return (median < 200) and (100 > bright_ts > 1)\n",
-    "\n",
-    "\n",
-    "detected_bursts = grouped_by_trench.filter(func)"
+    "detected_bursts = labelwise_selected3[labelwise_selected3[\"bright_ts\"] == 1]"
    ]
   },
   {
@@ -1322,7 +1336,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(detected_bursts)"
+    "%%time\n",
+    "len(detected_bursts.groupby(trench_key))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=180\n",
+    "# p = hv.Scatter(detected_bursts, kdims=['t'], vdims=['YFP/labelwise/p0.9', 'filename', 'position', 'trench_set', 'trench'])\n",
+    "d = {\n",
+    "    i: hv.Scatter(\n",
+    "        pd.concat([g[1] for g in groups]),\n",
+    "        kdims=[\"t\"],\n",
+    "        vdims=[\"YFP/labelwise/p0.9\", \"filename\", \"position\", \"trench_set\", \"trench\"],\n",
+    "    )\n",
+    "    for i, groups in enumerate(util.grouper(detected_bursts.groupby(trench_key), 5))\n",
+    "}\n",
+    "p = hv.HoloMap(d)\n",
+    "tooltips = [\n",
+    "    (\"t\", \"@t{0[.]0}\"),\n",
+    "    # ('filename', '@filename'),\n",
+    "    (\"trench\", \"@position.@trench_set.@trench\"),\n",
+    "    (\"YFP\", \"@{YFP/labelwise/p0.9}{0[.]0}\"),\n",
+    "]\n",
+    "hover = HoverTool(tooltips=tooltips)\n",
+    "tap = TapTool()\n",
+    "p = p.options(\n",
+    "    \"Scatter\",\n",
+    "    size=3,\n",
+    "    color_index=\"trench\",\n",
+    "    nonselection_alpha=0.3,\n",
+    "    cmap=\"Category20\",\n",
+    "    tools=[hover, tap],\n",
+    ")\n",
+    "# pr = hv.renderer('bokeh').get_plot(p).state\n",
+    "# renderer = pr.renderers[-1]\n",
+    "# renderer.nonselection_glyph = renderer.glyph\n",
+    "p"
    ]
   },
   {
@@ -1333,8 +1387,17 @@
    "source": [
     "%%output size=180\n",
     "hv.Scatter(\n",
-    "    detected_bursts, kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"trench\"]\n",
+    "    detected_bursts[:10_000], kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"trench\"]\n",
     ").options(size=3, color_index=\"trench\", cmap=\"Category20\", tools=[\"hover\", \"tap\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trenchwise_df.index.names"
    ]
   },
   {
@@ -1392,7 +1455,13 @@
     "%%output size=180\n",
     "p = hv.Scatter(\n",
     "    detected_bursts[:10_000], kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"trench\"]\n",
-    ").options(size=3, color_index=\"trench\", tools=[\"hover\", \"tap\"], cmap=\"Category20\")\n",
+    ").options(\n",
+    "    size=3,\n",
+    "    color_index=\"trench\",\n",
+    "    nonselection_alpha=0.3,\n",
+    "    tools=[\"hover\", \"tap\"],\n",
+    "    cmap=\"Category20\",\n",
+    ")\n",
     "ui.selection_to_stream(p, label_stream)\n",
     "p"
    ]
@@ -1611,142 +1680,6 @@
     "m = pd.melt(d.loc[:, cols])\n",
     "# m.index = d.index\n",
     "# m"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Plot tapping"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "LabelStream = ui.MultiIndexStream.define(\"LabelStream\", labelwise_df.index)\n",
-    "label_stream = LabelStream()\n",
-    "box = ui.dataframe_browser(label_stream)\n",
-    "label_stream.event()\n",
-    "box"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = d.hvplot.scatter(\"t\", \"YFP_labelwise_p0.95\").options(tools=[\"tap\", \"hover\"])\n",
-    "ui.selection_to_stream(p, label_stream)\n",
-    "p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cb(**kwargs):\n",
-    "    dat = labelwise_df.loc[\n",
-    "        workflow.stream_slice(\n",
-    "            labelwise_df.index.names, kwargs, t=slice(None), label=slice(None)\n",
-    "        ),\n",
-    "        :,\n",
-    "    ]\n",
-    "    plot = dat.hvplot.scatter(\"t\", \"YFP_labelwise_p0.95\").options(\n",
-    "        tools=[\"tap\", \"hover\"]\n",
-    "    )\n",
-    "    # ui.selection_to_stream(plot, label_stream)\n",
-    "    return plot\n",
-    "\n",
-    "\n",
-    "ui.viewer(cb, label_stream)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Transcription errors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected_cells.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected_cells.index[0][:-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_bboxes.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected_cells.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected_cells.index[0][2:-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected_trenches = trench_bboxes.xs(\n",
-    "    (*selected_cells.index[0][:2], \"MCHERRY\", 0, *selected_cells.index[0][3:-1]),\n",
-    "    drop_level=False,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected_trenches.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "workflow.get_trench_stacks(selected_trenches, all_frames, image_limits)"
    ]
   },
   {
