Summarize number of options in column_browser.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180904.2 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180904.2 Burst analysis.ipynb
@@ -1406,6 +1406,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"{:.2n}\".format(1.12345)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "LabelStream = ui.MultiIndexStream.define(\"LabelStream\", labelwise_df.index)\n",
     "label_stream = LabelStream()\n",
     "box = ui.dataframe_browser(label_stream)\n",
