--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180904.2 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180904.2 Burst analysis.ipynb
@@ -1327,7 +1327,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "detected_bursts = labelwise_selected3[labelwise_selected3[\"bright_ts\"] == 1]"
+    "detected_bursts = labelwise_selected3[labelwise_selected3[\"bright_ts\"] > 30]"
    ]
   },
   {
@@ -1447,11 +1447,21 @@
     "        (\"value\", \"@z\"),\n",
     "    ]\n",
     ")\n",
-    "cb = compose(partial(ui.hover_image, hover), ui._trench_img, workflow.get_trench_image)\n",
+    "# cb = compose(partial(ui.hover_image, hover), ui._trench_img, workflow.get_trench_image)\n",
+    "cb = lambda v_max: compose(\n",
+    "    partial(ui.hover_image, hover),\n",
+    "    lambda x: x.redim.range(z=(0, v_max)),\n",
+    "    ui._trench_img,\n",
+    "    workflow.get_trench_image,\n",
+    ")\n",
     "# cb = workflow.get_trench_image\n",
     "(\n",
-    "    ui.trench_viewer(trench_bboxes, label_stream, channel=\"MCHERRY\", image_callback=cb)\n",
-    "    + ui.trench_viewer(trench_bboxes, label_stream, channel=\"YFP\", image_callback=cb)\n",
+    "    ui.trench_viewer(\n",
+    "        trench_bboxes, label_stream, channel=\"MCHERRY\", image_callback=cb(4000)\n",
+    "    )\n",
+    "    + ui.trench_viewer(\n",
+    "        trench_bboxes, label_stream, channel=\"YFP\", image_callback=cb(800)\n",
+    "    )\n",
     ").cols(1)"
    ]
   },
@@ -1463,7 +1473,7 @@
    "source": [
     "%%output size=180\n",
     "p = hv.Scatter(\n",
-    "    detected_bursts[:10_000], kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"trench\"]\n",
+    "    detected_bursts[10_000:20_000], kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"trench\"]\n",
     ").options(\n",
     "    size=3,\n",
     "    color_index=\"trench\",\n",
