First cut of scatter plot showings batches of trenches with selection_to_stream working.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180904.2 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180904.2 Burst analysis.ipynb
@@ -1327,7 +1327,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "detected_bursts = labelwise_selected3[labelwise_selected3[\"bright_ts\"] > 30]"
+    "detected_bursts = labelwise_selected3[labelwise_selected3[\"bright_ts\"] == 1]"
    ]
   },
   {
@@ -1506,6 +1506,117 @@
     "\n",
     "\n",
     "ui.viewer(cb, label_stream)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Groupby UI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groups = detected_bursts.groupby(trench_key)\n",
+    "group_set_keys = list(util.grouper(groups.groups.keys(), 5))\n",
+    "index = pd.MultiIndex.from_tuples([(i,) for i in range(len(group_set_keys))])\n",
+    "index.names = [\"group_set\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GroupStream = ui.MultiIndexStream.define(\"GroupStream\", index)\n",
+    "group_stream = GroupStream()\n",
+    "box = ui.dataframe_browser(group_stream)\n",
+    "group_stream.event()\n",
+    "box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.subscribers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=180\n",
+    "sel = Selection1D()\n",
+    "\n",
+    "\n",
+    "def callback(group_set):\n",
+    "    df = pd.concat([groups.get_group(key) for key in group_set_keys[group_set]])\n",
+    "    plot = hv.Scatter(\n",
+    "        df,\n",
+    "        kdims=[\"t\"],\n",
+    "        vdims=[\"YFP/labelwise/p0.9\", \"filename\", \"position\", \"trench_set\", \"trench\"],\n",
+    "    )\n",
+    "    tooltips = [\n",
+    "        (\"t\", \"@t{0[.]0}\"),\n",
+    "        # ('filename', '@filename'),\n",
+    "        (\"trench\", \"@position.@trench_set.@trench\"),\n",
+    "        (\"YFP\", \"@{YFP/labelwise/p0.9}{0[.]0}\"),\n",
+    "    ]\n",
+    "    hover = HoverTool(tooltips=tooltips)\n",
+    "    tap = TapTool()\n",
+    "    plot = plot.options(\n",
+    "        \"Scatter\",\n",
+    "        size=3,\n",
+    "        color_index=\"trench\",\n",
+    "        nonselection_alpha=0.3,\n",
+    "        cmap=\"Category20\",\n",
+    "        tools=[hover, tap],\n",
+    "        show_legend=True,\n",
+    "    )\n",
+    "    # ui.selection_to_stream(plot, label_stream)\n",
+    "    sel.clear()\n",
+    "    sel.add_subscriber(\n",
+    "        partial(\n",
+    "            ui._selection_to_stream_callback,\n",
+    "            data=plot.data,\n",
+    "            keys=df.index.names,\n",
+    "            stream=label_stream,\n",
+    "        )\n",
+    "    )\n",
+    "    return plot\n",
+    "\n",
+    "\n",
+    "p = hv.DynamicMap(callback, streams=[group_stream])\n",
+    "sel.source = p\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%prun group_stream.event(group_set=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sel"
    ]
   },
   {
